public/css/main.css
@font-face {
    font-family: 'MuseoSans';
    src: url('fonts/MuseoSans_300.otf'); 
    src: 
        local('MuseoSans'),
        local('MuseoSans-Font'),
        url('fonts/MuseoSans_300.otf') 
        format('opentype');
}

/* Space out content a bit */
body {
    padding-bottom: 20px;
    background-color: #f3f2eb;
    font-family: MuseoSans;
}

/* Everything but the jumbotron gets side spacing for mobile-first views */
.header,
.marketing,
.footer {
    padding-left: 15px;
    padding-right: 15px;
}

/* Custom page header */
.header {
    border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
}

/* Custom page footer */
.footer {
    padding-top: 19px;
    color: #777;
    border-top: 1px solid #e5e5e5;
}

/* Custom container */
.container-narrow {
    margin: 0 auto;
    max-width: 750px;
   
}

.container-narrow > hr {
    margin: 30px 0;
}

.add-place-form {
    margin: 40px 0;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 600px) {
    /* Remove the padding we set earlier */
    .header,
    .marketing,
    .footer {
        padding-left: 0;
        padding-right: 0;
    }
    /* Space out the masthead */
    .header {
        margin-bottom: 30px;
    }
}

#map {
    height: 300px;
    margin: 30px 0;
    border: solid;
    border-width: 1px;
    border-color: #cccccc;
}

a, p{
    font-family: MuseoSans;
}

.place-img {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: auto;
    margin-top: auto;
}

.category-group {
    padding-top: 5px;
    padding-bottom: 5px;
}

.tips-highlights-group {
    padding-top: 5px;
}

.addplace-btn {
    padding-bottom: 15px;
}

textarea.ng-dirty.ng-valid, input.ng-dirty.ng-valid { border:1px solid Green; }
textarea.ng-dirty.ng-invalid, input.ng-dirty.ng-invalid { border:1px solid Red; }

textarea:disabled{
    background-color: #e0e0e0;
}

.favorite {
    color: #ff69b4;
}

.nofavorite {
    color: #a9a9a9;
}

.panel .list-group {
  margin: -16px -15px -10px;
}

.panel .list-group .list-group-item {
  border-width: 1px 0;
}

.panel .list-group .list-group-item:first-child {
  border-top-right-radius: 0;
  border-top-left-radius: 0;
}

.panel .list-group .list-group-item:last-child {
  border-bottom: 0;
}

